--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jcedrik.com" />
     
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-8HGCRXYE0K"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-8HGCRXYE0K');
+    </script>
+    
     <title>Jean-Cédrik Dorélas | Portfolio</title>
   </head>
   <body>
